src/z80asm/z80asm2/t/30-directive/expected/local_01.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/local_01.asm
Assembling t/30-directive/input/local_01.asm...
t/30-directive/input/local_01.asm:1:1: error: Unexpected LOCAL directive
    local ; outside macro
    ^
t/30-directive/input/local_01.asm:2:1: error: Unexpected LOCAL directive
    local X; outside macro
    ^
t/30-directive/input/local_01.asm:7:8: error: Unexpected token after LOCAL: 12
    	local 12 ; no variable
    	      ^
t/30-directive/input/local_01.asm:8:1: error: Unexpected ENDM directive
    endm
    ^
t/30-directive/input/local_01.asm:10:14: error: Identifier expected
    	local label, ; missing variable
    	            ^
t/30-directive/input/local_01.asm:11:1: error: Unexpected ENDM directive
    endm
    ^
t/30-directive/input/local_01.asm:13:14: error: Unexpected token after LOCAL: extra
    	local l1,l2 extra ; extra input
    	            ^
t/30-directive/input/local_01.asm:14:1: error: Unexpected ENDM directive
    endm
    ^
t/30-directive/input/local_01.asm:16:11: error: Parameter redefined: l1
    	local l1,l1 ; duplicate parameter
    	         ^
t/30-directive/input/local_01.asm:17:1: error: Unexpected ENDM directive
    endm
    ^
# file: t/30-directive/input/local_01.asm
EndOfLine	"\n"	18:1	
# file: t/30-directive/input/local_01.asm
Identifier	"MACRO"	3:7	keyword=MACRO 
Identifier	"M1"	3:7	
EndOfLine	"\n"	3:7	
Identifier	"ENDM"	3:7	keyword=ENDM 
